--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- Main Content Section -->
   <div class="home-section">
-    <img class="lab-image" src="/images/kedos.jpg" alt="Lab Overview Image" />
+    <img class="lab-image" src="/images/labtayfa.jpg" alt="Lab Overview Image" />
 
     <div class="about-box">
       <h3>About Us</h3>
