--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
     <div class="about-box">
       <h3>About Us</h3>
       <p>
-        Welcome to MIStraLab, where we focus on cutting-edge research in
-        materials informatics and strategic development...
+Materials Informatics Strategies Laboratory (MISTraLab) at Middle East Technical University. is a multidisciplinary research group dedicated to advancing materials science through the power of data-driven methods and machine learning. At MISTraLab, we tackle complex challenges in materials discovery, design and optimization by integrating computational modeling, informatics and experimental data. Our mission is to accelerate scientific breakthroughs by developing cutting-edge tools and methodologies at the intersection of materials science and artificial intelligence.
+
+Driven by curiosity and collaboration, our team works on projects that span academic research and real-world industrial applications — with the goal of shaping the future of smart materials and sustainable technologies.
       </p>
     </div>
   </div>
