--- a/team/index.html
+++ b/team/index.html
@@ -108,8 +108,9 @@
       <img src="/images/iremtopsakal.jpg" alt="Student 2">
       <div class="member-info">
         <h3><a href="/team/iremtopsakal/">İrem Topsakal</a></h3>
-        <p><strong>Education:</strong> M.Sc. in ...</p>
-        <p><strong>Research Area:</strong> Computational Materials Science...</p>
+        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
+        <p> B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
+        <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
           <a href="mailto:iremto@metu.edu.tr"><i class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/iremtopsakal" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -119,9 +120,24 @@
     </div>
 
     <div class="member">
-      <img src="/images/kedos.jpg" alt="Student 3">
+      <img src="/images/dilarahasil.jpg" alt="Student 3">
       <div class="member-info">
-        <h3><a href="/team/student3/">Name Surname</a></h3>
+        <h3><a href="/team/student3/">Dilara Hasıl</a></h3>
+        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
+        <p> B.Sc. in Metallurgical and Materials Engineering, METU (2022) </p>
+        <p><strong>Research Area:</strong> Chemical process optimization </p>
+        <div class="icons">
+          <a href="mailto:dilara.hasile@metu.edu.tr"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/dilara-has%C4%B1l/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="member">
+      <img src="/images/kedos.jpg" alt="Student 4">
+      <div class="member-info">
+        <h3><a href="/team/student4/">Name Surname</a></h3>
         <p><strong>Education:</strong> M.Sc. in ...</p>
         <p><strong>Research Area:</strong> Computational Materials Science...</p>
         <div class="icons">
@@ -174,3 +190,4 @@
 
 </body>
 </html>
+
