--- a/team/index.html
+++ b/team/index.html
@@ -127,12 +127,12 @@
         <p> B.Sc. in Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
-          <a href="mailto:dilara.hasile@metu.edu.tr"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:dilara.hasil@metu.edu.tr"><i class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/dilara-has%C4%B1l/" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
-  </div>
+
 
   <div class="member">
       <img src="/images/kedos.jpg" alt="Student 4">
@@ -190,5 +190,6 @@
 
 </body>
 </html>
+
 
 
