--- a/team/index.html
+++ b/team/index.html
@@ -133,11 +133,25 @@
       </div>
     </div>
 
+    
+  <div class="member">
+      <img src="/images/samildincer.jpg" alt="Student 4">
+      <div class="member-info">
+        <h3><a href="/team/student4/">Mehmet Şamil Dinçer</a></h3>
+        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
+        <p> B.Sc. in Metallurgical and Materials Engineering, METU (2022) </p>
+        <p><strong>Research Area:</strong> Computational thermodynamics </p>
+        <div class="icons">
+          <a href="mailto:samildincer@gmail.com"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/mehmet-%C5%9Famil-din%C3%A7er/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
 
   <div class="member">
-      <img src="/images/kedos.jpg" alt="Student 4">
+      <img src="/images/kedos.jpg" alt="Student 5">
       <div class="member-info">
-        <h3><a href="/team/student4/">Name Surname</a></h3>
+        <h3><a href="/team/student5/">Name Surname</a></h3>
         <p><strong>Education:</strong> M.Sc. in ...</p>
         <p><strong>Research Area:</strong> Computational Materials Science...</p>
         <div class="icons">
@@ -190,6 +204,7 @@
 
 </body>
 </html>
+
 
 
 
