--- a/team/index.html
+++ b/team/index.html
@@ -124,7 +124,7 @@
       <div class="member-info">
         <h3><a href="/team/student3/">Dilara Hasıl</a></h3>
         <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
-        <p> B.Sc. in Metallurgical and Materials Engineering, METU (2022) </p>
+        <p> B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
           <a href="mailto:dilara.hasil@metu.edu.tr"><i class="fas fa-envelope"></i></a>
@@ -139,7 +139,7 @@
       <div class="member-info">
         <h3><a href="/team/student4/">Mehmet Şamil Dinçer</a></h3>
         <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
-        <p> B.Sc. in Metallurgical and Materials Engineering, METU (2022) </p>
+        <p> B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Computational thermodynamics </p>
         <div class="icons">
           <a href="mailto:samildincer@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -148,10 +148,24 @@
       </div>
     </div>
 
-  <div class="member">
-      <img src="/images/kedos.jpg" alt="Student 5">
+    <div class="member">
+      <img src="/images/gulcehreyuksel.jpg" alt="Student 5">
       <div class="member-info">
-        <h3><a href="/team/student5/">Name Surname</a></h3>
+        <h3><a href="/team/student5/">Gülçehre Duygu Yüksel</a></h3>
+        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
+        <p> B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
+        <p><strong>Research Area:</strong> Metal-to-insulator transition materials </p>
+        <div class="icons">
+          <a href="mailto:yukselg@metu.edu.tr"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/gulcehreyuksel/ " target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+    
+  <div class="member">
+      <img src="/images/kedos.jpg" alt="Student 6">
+      <div class="member-info">
+        <h3><a href="/team/student6/">Name Surname</a></h3>
         <p><strong>Education:</strong> M.Sc. in ...</p>
         <p><strong>Research Area:</strong> Computational Materials Science...</p>
         <div class="icons">
@@ -204,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
