--- a/team/index.html
+++ b/team/index.html
@@ -158,6 +158,7 @@
         <div class="icons">
           <a href="mailto:yukselg@metu.edu.tr"><i class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/gulcehreyuksel/ " target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/gulcehre" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -218,6 +219,7 @@
 
 </body>
 </html>
+
 
 
 
