--- a/team/index.html
+++ b/team/index.html
@@ -92,14 +92,13 @@
       <img src="/images/ugurakbulut.jpg" alt="Student 1">
       <div class="member-info">
         <h3><a href="/team/ugurakbulut/">Rıza Uğur Akbulut</a></h3>
-        <p><strong>Education:</strong> M.Sc. in ...</p>
-        <p><strong>Research Area:</strong> Computational Materials Science...</p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2024 - cont.</p>
+        <p> B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
+        <p> Minor, Physics, METU (2025)</p>
+        <p><strong>Research Area:</strong> Electronic properties of materials</p>
         <div class="icons">
-          <a href="mailto:student1@example.com"><i class="fas fa-envelope"></i></a>
-          <a href="https://orcid.org/0000-0000-0000-0000" target="_blank"><i class="fa-brands fa-orcid"></i></a>
-          <a href="https://scholar.google.com" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+          <a href="mailto:uakbulut@metu.edu.tr"><i class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/example" target="_blank"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -154,7 +153,7 @@
         <h3><a href="/team/student5/">Gülçehre Duygu Yüksel</a></h3>
         <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
         <p> B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
-        <p><strong>Research Area:</strong> Metal-to-insulator transition materials </p>
+        <p><strong>Research Area:</strong> Electronic properties of materials </p>
         <div class="icons">
           <a href="mailto:yukselg@metu.edu.tr"><i class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/gulcehreyuksel/ " target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -219,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
