--- a/team/index.html
+++ b/team/index.html
@@ -93,8 +93,8 @@
       <div class="member-info">
         <h3><a href="/team/ugurakbulut/">Rıza Uğur Akbulut</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2024 - cont.</p>
-        <p> B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
-        <p> Minor, Physics, METU (2025)</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
+        <p> • Minor, Physics, METU (2025)</p>
         <p><strong>Research Area:</strong> Electronic properties of materials</p>
         <div class="icons">
           <a href="mailto:uakbulut@metu.edu.tr"><i class="fas fa-envelope"></i></a>
@@ -105,10 +105,9 @@
 
     <div class="member">
       <img src="/images/iremtopsakal.jpg" alt="Student 2">
-      <div class="member-info">
-        <h3><a href="/team/iremtopsakal/">İrem Topsakal</a></h3>
-        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
-        <p> B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
+      <div class="member-info">\ 
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2024 - cont.</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
           <a href="mailto:iremto@metu.edu.tr"><i class="fas fa-envelope"></i></a>
@@ -122,8 +121,8 @@
       <img src="/images/dilarahasil.jpg" alt="Student 3">
       <div class="member-info">
         <h3><a href="/team/student3/">Dilara Hasıl</a></h3>
-        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
-        <p> B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
         <div class="icons">
           <a href="mailto:dilara.hasil@metu.edu.tr"><i class="fas fa-envelope"></i></a>
@@ -137,8 +136,8 @@
       <img src="/images/samildincer.jpg" alt="Student 4">
       <div class="member-info">
         <h3><a href="/team/student4/">Mehmet Şamil Dinçer</a></h3>
-        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
-        <p> B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2022 - cont.</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Computational thermodynamics </p>
         <div class="icons">
           <a href="mailto:samildincer@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -151,8 +150,8 @@
       <img src="/images/gulcehreyuksel.jpg" alt="Student 5">
       <div class="member-info">
         <h3><a href="/team/student5/">Gülçehre Duygu Yüksel</a></h3>
-        <p> M.Sc. Metallurgical and Materials Engineering, METU (cont.) </p>
-        <p> B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
+        <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
+        <p> • B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
         <p><strong>Research Area:</strong> Electronic properties of materials </p>
         <div class="icons">
           <a href="mailto:yukselg@metu.edu.tr"><i class="fas fa-envelope"></i></a>
@@ -218,6 +217,7 @@
 
 </body>
 </html>
+
 
 
 
