--- a/team/index.html
+++ b/team/index.html
@@ -89,7 +89,7 @@
     <h3>Master Students</h3>
 
     <div class="member">
-      <img src="/images/ugurakbulut.jpg" alt="Student 1">
+      <img src="/images/ugurakbulut.jpg" alt="Rıza Uğur Akbulut">
       <div class="member-info">
         <h3><a href="/team/ugurakbulut/">Rıza Uğur Akbulut</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2024 - cont.</p>
@@ -104,8 +104,9 @@
     </div>
 
     <div class="member">
-      <img src="/images/iremtopsakal.jpg" alt="Student 2">
-      <div class="member-info">\ 
+      <img src="/images/iremtopsakal.jpg" alt="İrem Topsakal">
+      <div class="member-info">
+        <h3><a href="/team/iremtopsakal/">İrem Topsakal</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2024 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2024)</p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
@@ -118,9 +119,9 @@
     </div>
 
     <div class="member">
-      <img src="/images/dilarahasil.jpg" alt="Student 3">
+      <img src="/images/dilarahasil.jpg" alt="Dilara Hasıl">
       <div class="member-info">
-        <h3><a href="/team/student3/">Dilara Hasıl</a></h3>
+        <h3><a href="/team/dilarahasil/">Dilara Hasıl</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Chemical process optimization </p>
@@ -133,9 +134,9 @@
 
     
   <div class="member">
-      <img src="/images/samildincer.jpg" alt="Student 4">
+      <img src="/images/samildincer.jpg" alt="Mehmet Şamil Dinçer">
       <div class="member-info">
-        <h3><a href="/team/student4/">Mehmet Şamil Dinçer</a></h3>
+        <h3><a href="/team/samildincer/">Mehmet Şamil Dinçer</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2022 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2022) </p>
         <p><strong>Research Area:</strong> Computational thermodynamics </p>
@@ -147,9 +148,9 @@
     </div>
 
     <div class="member">
-      <img src="/images/gulcehreyuksel.jpg" alt="Student 5">
+      <img src="/images/gulcehreyuksel.jpg" alt="Gülçehre Duygu Yüksel>
       <div class="member-info">
-        <h3><a href="/team/student5/">Gülçehre Duygu Yüksel</a></h3>
+        <h3><a href="/team/gulcehreyuksel/">Gülçehre Duygu Yüksel</a></h3>
         <p style="color: #777; font-size: 0.9em; margin-top: -8px;"> 2023 - cont.</p>
         <p> • B.Sc. Metallurgical and Materials Engineering, METU (2023) </p>
         <p><strong>Research Area:</strong> Electronic properties of materials </p>
@@ -217,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
