--- a/team/index.html
+++ b/team/index.html
@@ -86,6 +86,23 @@
       </div>
     </div>
 
+    
+    <h3>PhD Students</h3>
+
+      <div class="member">
+      <img src="/images/kedos.jpg" alt="Student 7">
+      <div class="member-info">
+        <h3><a href="/team/student7/">Name Surname</a></h3>
+        <p><strong>Education:</strong> M.Sc. in ...</p>
+        <p><strong>Research Area:</strong> Computational Materials Science...</p>
+        <div class="icons">
+          <a href="mailto:example@example"><i class="fas fa-envelope"></i></a>
+          <a href="www.linkedin.com/in/example" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/example" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+      </div>
+    </div>
+    
     <h3>Master Students</h3>
 
     <div class="member">
@@ -218,6 +235,7 @@
 
 </body>
 </html>
+
 
 
 
